--- a/pages/login.html
+++ b/pages/login.html
@@ -4,14 +4,57 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <title>ResíliaFlix</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+
+
+
+
+
+
+    <header style="background-color: #111">
+
+        <!-- .container de alinhamento p/ header -->
+
+      <div class="container-fuid d-flex justify-content-between align-items-center">
+
+        <!-- logo -->
+
+        <img src="ResiliaflixLogo - Blue.svg" alt="" style="width: 230px; margin-left: 45px;">
+
+        <nav>
+
+          <ul class="list-unstyled d-flex">
+
+            <!-- Seta de voltar -->
+
+            <li><a href="#"><img src="left-arrow-64px.png" alt="" style="width: 35px; height: 35px; margin: 18px 45px 0 0;"></style></a></li>
+
+          </ul>
+
+        </nav>
+
+      </div>
+
+    </header>
+
+    <!-- Conteúdo do formulário -->
+
+    <section class="container-fluid bg-dark" style="width: 100%; height: calc(100vh - 69px);">
+
+    </section>
+
+
+    
+  
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
