Alteração html e css e arquivo fundo.png

--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -10,10 +10,10 @@
 <body>
 <header id="cabeca">
     <div class="esquerda">
-        Resiliaflix
+      <img src="/images/ResiliaflixLogo - Blue.svg" alt="logoAzul" id="logo">
     </div>
     <div class="direita">
-            <a href="https://www.google.com/"> ᐸ Voltar</a>
+            <a href="/home"> ᐸ </a>
     </div>
 </header> 
 
