--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <title>Resilia Flix</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <div class="card">
-        <div class="card-body">
-          This is some text within a card body.
-        </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/home.css">
+  <title>Resilia Flix</title>
+</head>
+
+<body>
+
+    <!--Inserindo menu-->
+
+   
+    <nav class="navbar sidebar-open navbar-dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-  </body>
+
+      <a href="#" class="navbar-brand flex-grow-1">
+        <img src="images/ResiliaflixLogo - Blue.svg" alt="logo" height="100" class="my-1 mx-2">
+
+      </a>
+
+      <form class="form-inline" id="busca">
+          <input type="search" class="form-control" placeholder="Busca">
+      </form>
+      
+      <!--Inserindo foto do perfil-->
+      <ul class="list-unstyled font-weight-bold">
+        <li class="media media-avatar">
+          <img src="images/avatar.jpg" id="avatar" alt="avatar" class="mr-2">
+          <div class="media-body">
+            <p class="h6 m-0">Sebastian Michaelis </p>
+            <small>Trocar de Perfil</small>
+          </div>
+        </li>
+
+        <!--Criando a lista-->
+
+        <li class="divider"></li>
+        <li><a href="" class="text-reset">Inicio</a></li>
+        <li><a href="" class="text-reset">Minha Lista</a></li>
+        <li><a href="" class="text-reset">Séries de ação e aventura</a></li>
+        <li><a href="" class="text-reset">Ação e aventura</a></li>
+        <li><a href="" class="text-reset">Séries teen</a></li>
+        <li><a href="" class="text-reset">Filmes de terror</a></li>
+        <li><a href="" class="text-reset">Filmes nacionais</a></li>
+        <li><a href="" class="text-reset">Comédia romântica</a></li>
+      </ul>
+    </nav>
+  
+    </nav>
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+    crossorigin="anonymous"></script>
+    <script src="js/principal.js"></script>
+</body>
+
 </html>
