--- a/pages/contato.html
+++ b/pages/contato.html
@@ -9,6 +9,7 @@
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/contato.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: 'Poppins';
@@ -20,11 +21,12 @@
 </head>
 
 <header>
-    <img src="../images/logo.png" alt="">
-    <h1>Contato</h1>
+    <img src="ResiliaflixLogo - Blue.svg" alt="" style="width: 230px; margin-left: 45px;">
+   
 </header>
 
 <body>
+  <h1>Contato</h1>
     <main>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
