--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -8,336 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link rel="stylesheet" href="cadastro.css">
     <title>ResíliaFlix</title>
   </head>
+  
+
+
+
+
+
   <body>
-
-
-
-
-
-
-
-
-
-
-
-<!-- Estilização -->
-<style>
-
-/* Definindo padrão bg-dark do BTS para #1b1b1b */
-body {
-  background-color: #212529!important; 
-  font-family: 'Poppins', sans-serif;
-}
-
-body, .btn-outline-info {
-  background-color: #b2ddf700;
-  color: #fff;
-  transition: 0.9s;
-}
-
-.btn-outline-info:hover {
-  background-color: rgba(255, 255, 255, 0);
-  color: #B2DDF7;
-  border-color: #0076c0;
-}
-
-.btn-outline-info {
-  width: 100px;
-  border-radius: 0!important;
-  margin: 30px auto auto auto;
-  box-shadow: none!important;
-  border: solid 2px rgba(128, 128, 128, 0.534);
-}
-
-/* O HEADER COMEÇA AQUI // COPIAR À PARTIR DAQUI*/
-/* Zerando configurações padrão do BTS no botão hamburguer */
-
-.btnMenu {
-  border: none!important;
-  -webkit-appearance: none!important;
-  -ms-appearance: none!important;
-  -moz-appearance: none!important;
-  appearance: none!important;
-  outline: none!important;
-  box-shadow: none!important;
-}
-
-.navbar {
-  position: relative;
-  z-index: 1000;
-  max-height: 80px;
-  padding: 0 5px;
-}
-
-.navBrand {
-  flex-grow: 1;
-}
-
-.logo {
-  width: 170px;
-  height: 80px;
-}
-
-.navbar img {
-  padding: 1px;
-}
-
- .navbar .buttonList {
-  color: #fff;
-  max-width: 160px;
-  max-height: 165px;
-  background-color: rgba(17, 17, 17, 0.397);
-  position: absolute;
-  top: 75px;
-  left: -250px;
-  height: calc(100vh - 80px);
-  overflow-y: auto;
-  transition: all 0.5s ease-in-out;
-  opacity: .5;
-} 
-
-.navbar.sidebar-open .buttonList {
-  left: -20px;
-  opacity: 1;
-  width: 250px;
-} 
-
-.navbar .buttonList li {
-  padding: 0.4em 0.4em;
-  margin: 0 0 0 28px;
-  cursor: pointer;
-}
-.navbar ul li a {
-  text-decoration: none!important;
-}
-.navbar ul li:hover {
-  color: #B2DDF7;
-}
-
-.flexList {
-  display: none;
-}
-
-#icon {
-  margin: 0 5px 5px 0;
-  padding: 2px;
-}
-
-.searchAndProfile {
-  display: flex!important;
-
-  }
-
-  #profile {
-    margin: 0 0 0 7px;
-  }
-
-  /* O HEADER TEMRINA AQUI COPIAR ATÉ AQUI*/
-
-  .title-signUp {
-    color: #B2DDF7!important;
-    /* text-transform: uppercase; */
-    font-weight: 300;
-  }
-
-  .signUp {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    height: 46em;
-  }
-
-  .formSignUp {
-    padding: auto;
-  }
-
-/* ESTA É A ESTILIZAÇÃO DOS FORMULÁRIOS, OU SEJA, OS EFEITOS DE TRANSIÇÃO DO INPUT ESTÃO AQUI ! COPIEM */
-  
-  .form-control, .form-select {
-    border: 1px solid rgba(128, 128, 128, 0.425);
-    border-radius: 0!important;
-    background-color: rgba(17, 17, 17, 0.356);
-    color: rgba(128, 128, 128, 0.658);
-    box-shadow: none;
-    font-size: 12px;
-  }
-  
-  input {
-    color: #fff!important;
-  }
-
-  .form-control:focus {
-    box-shadow: none!important;
-    background-color: rgba(17, 17, 17, 0.938);
-    transition: 0.9s;
-  }
-  .form-select:focus {
-    box-shadow: none!important;
-    background-color: rgba(17, 17, 17, 0.938);
-  }
-
-  /* OS EFEITOS E ESTILIZAÇÃO DOS INPUTS TERMINAM AQUI// COPIAR ATÉ AQUI */
-
-  /* ESTILO DE RESPONSIVIDADE DO FOOTER PARA A LETRA FICAR PEQUENA NO MOBILE // COPIEM AQUI */
-
-  h6 {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 15px!important;
-  }
-/* ESTILO DE RESPONSIVIDADE DO FOOTER P/ MOBILE TERMINA AQUI // COPIAR ATÉ AQUI */
-
-@media (min-width: 576px) {
-
-/* LOGO AUMENTA DE TAMANHO QUANDO A TELA AUMENTA / COPIEM AQUI */
-
-  .logo {
-    width: 190px;
-    height: 80px;
-  }
-
-  /* LOGO AUMENTA DE TAMANHO QUANDO A TELA AUMENTA TERMINA AQUI / COPIEM ATÉ AQUI */
-
- /* ESTILO DE RESPONSIVIDADE DO FOOTER PARA A LETRA VOLTAR AO NORMAL COM TELAS MAIORES // COPIEM AQUI */
-
-  h6 {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 18px!important;
-  }
-
-  /* ESTILO DE RESPONSIVIDADE DO FOOTER PARA A LETRA VOLTAR AO NORMAL COM TELAS MAIORES TERMINA AQUI // COPIEM ATÉ AQUI */
-
-  .navbar .buttonList li {
-  padding: 0.8em 0.4em;
-  margin: 0 0 0 28px;
-  cursor: pointer;;
-}
-
-  .navbar .buttonList {
-    max-width: 160px;
-    max-height: 216px;
-  }
-
-.form-control, .form-select {
-    border: 1px solid rgba(128, 128, 128, 0.425);
-    border-radius: 0!important;
-    background-color: rgba(17, 17, 17, 0.356);
-    color: rgba(128, 128, 128, 0.658);
-    box-shadow: none;
-    font-size: 17px;
-  }
-}
-
-@media (min-width: 769px){
-
-/* ESTILO DE RESPONSIVIDADE PARA FAZER O BOTÃO DE MENU SUMIR E A LISTA FLEX APARECER QUANDO A TELA AUMENTAR DE TAMANHO / COPIEM À PARTIR DAQUI */
-
-  .navbar {
-    margin-bottom: 40px;
-  }
-  .btnMenu {
-    display: none;
-  }
-
-  .navBrand {
-  flex-grow: 0;
-}
-
-  .navbar .buttonList li {
-  padding: 0.8em 0.4em;
-  margin: 0 0 0 28px;
-  cursor: pointer;
-  display: none;
-
-}
-
-  .custom-field {
-  display: none;
-}
-
-  .flexList {
-    width: 280px;
-    display: flex;
-    margin: 0 0 0 0;  
-    align-items: center;
-    justify-content: space-evenly;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 300;
-  }
-  
-  .searchAndProfile {
-  display: flex!important;
-  }
-
-  #profile {
-    margin: 0 0 0 30px;
-  }
-
-  /* ESTILO DE RESPONSIVIDADE PARA FAZER O BOTÃO DE MENU SUMIR E A LISTA FLEX APARECER QUANDO A TELA AUMENTAR DE TAMANHO TERMINA AQUI / COPIEM ATÉ AQUI */
-
-  .title-signUp {
-    color: #B2DDF7!important;
-  }
-
-  .signUp {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-    height: 35em;
-    padding: 0;
-  }
-
-  .formSignUp {
-    background-color: rgba(17, 17, 17, 0.295);
-    padding: 0 25px 32px 25px;
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-
-  .with-linear-gradient {
-  border-style: solid;
-  border-width: 1px;
-  border-image: linear-gradient(45deg, #0076c0, #daf0fd) 1;
-}
-
-  .btn-outline-info {
-  width: 100px;
-  border-radius: 0!important;
-  margin: 30px auto auto auto;
-  border: solid 2px rgba(128, 128, 128, 0.534);
-}
-
-  footer {
-    margin-top: 40px;
-  }
-}
-
-
-@media (min-width: 1200px){
-
-  /* RESPONSIVIDADE PARA FAZER A LOGO AUMENTAR DE TAMANHO PARA A TELAS GRANDES / COPIEM AQUI */
-
-  .logo {
-    width: 250px;
-    height: 100px;
-  }
-
-  /* RESPONSIVIDADE PARA FAZER A LOGO AUMENTAR DE TAMANHO PARA A TELAS GRANDES TERMINA AQUI / COPIEM ATÉ AQUI */
-}
-
-</style>
-
-
-
-
-
 <!-- HTML -->
 
 <!-- ESTRUTURA HTML DO HEADER COMEÇA AQUI / COPIEM À PARTIR DAQUI -->
@@ -471,7 +151,7 @@ body, .btn-outline-info {
     </div>
     <div class="col-6 col-md-5">
       <label for="validationCustom05" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationCustom05" placeholder="Confirmação de Senha" required>
+      <input type="text" class="form-control" id="validationCustom05" placeholder="Confirme a Senha" required>
       <div class="invalid-feedback">
         Senha incorreta
       </div>
@@ -487,6 +167,9 @@ body, .btn-outline-info {
         </label>
         <div class="invalid-feedback">
           Você precisa concordar para continuar
+        </div>
+        <div class="valid-feedback">
+          Verificado!
         </div>
       </div>
     </div>
@@ -513,31 +196,6 @@ body, .btn-outline-info {
   </footer>
 
 
-
-
-
-
-
-
-<!-- NÃO ESQUEÇAM DO JAVA SCRIPT DO BOTÃO HAMBURGUER ! COMEÇA AQUI -->
-
-  <script>
-
-    // Comando para fazer a lista aparecer no sideBar
-
-    const btn = document.querySelector ('.navbar-toggler');
-    const navbar = document.querySelector ('.navbar');
-
-    btn.addEventListener('click', e => {
-
-      navbar.classList.toggle('sidebar-open');
-
-    })
-
-
-  </script>
-
-<!-- SCRIPT DO BOTÃO HAMBURGUER TERMINA AQUI -->
       
 
 
@@ -554,6 +212,7 @@ body, .btn-outline-info {
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script> -->
    <script src="validation.js"></script>
+   <script src="sideBar.js"></script>
   </body>
 
 </html>
