--- a/index.html
+++ b/index.html
@@ -12,55 +12,55 @@
 </head>
 
 <body>
-
-    <!--Inserindo menu-->
-
-   
-    <nav class="navbar sidebar-open navbar-dark">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-
-      <a href="#" class="navbar-brand flex-grow-1">
-        <img src="images/ResiliaflixLogo - Blue.svg" alt="logo" height="100" class="my-1 mx-2">
-
+  <div class="container-fluid">
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+  
+      <button type="button" class="navbar-toggler btnMenu">
+        <img src="pages/align-left.png" alt="Menu" height="30px" width="32px">
+      </button>
+      <a href="#" class="navbar-brand navBrand">
+        <img src="pages/ResiliaflixLogo - Blue.png" class='logo' alt="Logo">
       </a>
-
-      <form class="form-inline" id="busca">
-          <input type="search" class="form-control" placeholder="Busca">
-      </form>
-      
-      <!--Inserindo foto do perfil-->
-      <ul class="list-unstyled font-weight-bold">
-        <li class="media media-avatar">
-          <img src="images/avatar.jpg" id="avatar" alt="avatar" class="mr-2">
-          <div class="media-body">
-            <p class="h6 m-0">Sebastian Michaelis </p>
-            <small>Trocar de Perfil</small>
-          </div>
-        </li>
-
-        <!--Criando a lista-->
-
-        <li class="divider"></li>
-        <li><a href="" class="text-reset">Inicio</a></li>
-        <li><a href="" class="text-reset">Minha Lista</a></li>
-        <li><a href="" class="text-reset">Séries de ação e aventura</a></li>
-        <li><a href="" class="text-reset">Ação e aventura</a></li>
-        <li><a href="" class="text-reset">Séries teen</a></li>
-        <li><a href="" class="text-reset">Filmes de terror</a></li>
-        <li><a href="" class="text-reset">Filmes nacionais</a></li>
-        <li><a href="" class="text-reset">Comédia romântica</a></li>
+  
+      <ul class="list-unstyled font-weight-bold buttonList">
+  
+        <li><a href="index.html" class="text-reset"><img src="pages/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="pages/buscafilme.html" class="text-reset"><img src="pages/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="#" class="text-reset"><img src="pages/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="pages/contato.html" class="text-reset"><img src="pages/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+    
       </ul>
+  
+      <ul class="list-unstyled font-weight-bold flexList flex-grow-1">
+  
+        <li><a href="index.html" class="text-reset"><img src="pages/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="pages/buscafilme.html" class="text-reset"><img src="pages/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="#" class="text-reset"><img src="pages/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="pages/contato.html" class="text-reset"><img src="pages/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+      </ul>
+  
+        <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
+          <li class="nav-item">
+            <a class="nav-link" href="#"><img src="pages/loupe.png" id='icon' width="33px" height="33px"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id ='profile' href="#"><img src="pages/user.png" id='icon' width="30px" height="30px"></a>
+          </li>
+        </ul>
     </nav>
   
-    </nav>
 
-
+    <footer class="d-flex flex-direction-column align-itens-center justify-content-center">
+      <div class="row">
+        <div class="col-12 my-2">
+          <h6 class = 'text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
+        </div>
+        <div class="col-12">
+          <h6 class = 'text-center text-white lead'><small>©todos os direitos reservados</small></h6>
+        </div>
+      </div>
+    </footer>
+  
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
