--- a/pages/contato.html
+++ b/pages/contato.html
@@ -21,7 +21,42 @@
 </head>
 
 <header>
-    <img src="ResiliaflixLogo - Blue.svg" alt="" style="width: 230px; margin-left: 45px;">
+  <div class="container-fluid">
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+  
+      <button type="button" class="navbar-toggler btnMenu">
+        <img src="align-left.png" alt="Menu" height="30px" width="32px">
+      </button>
+      <a href="#" class="navbar-brand navBrand">
+        <img src="ResiliaflixLogo - Blue.png" class='logo' alt="Logo">
+      </a>
+  
+      <ul class="list-unstyled font-weight-bold buttonList">
+  
+        <li><a href="../index.html" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="buscafilme.html" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="contato.html" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+    
+      </ul>
+  
+      <ul class="list-unstyled font-weight-bold flexList flex-grow-1">
+  
+        <li><a href="../index.html" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="buscafilme.html" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="contato.html" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+      </ul>
+  
+        <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
+          <li class="nav-item">
+            <a class="nav-link" href="#"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id ='profile' href="#"><img src="user.png" id='icon' width="30px" height="30px"></a>
+          </li>
+        </ul>
+    </nav>
    
 </header>
 
@@ -87,7 +122,17 @@
         </div>
     </main>
 
-
+    <footer class="d-flex flex-direction-column align-itens-center justify-content-center">
+      <div class="row">
+        <div class="col-12 my-2">
+          <h6 class = 'text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
+        </div>
+        <div class="col-12">
+          <h6 class = 'text-center text-white lead'><small>©todos os direitos reservados</small></h6>
+        </div>
+      </div>
+    </footer>
+  
 
     <script src="contato.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
