--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -66,20 +66,14 @@
     <h2 class="title-signUp text-white text-center bold">Cadastro</h2>
     <div class="col-8 col-md-5">
       <label for="validationTooltip01" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationTooltip01" placeholder="Nome Completo" required>
-      <div class="valid-feedback">
-        Verificado!
-      </div>
+      <input type="text" class="form-control" id="validationTooltip01" placeholder="Nome Completo" minlength="10" required>
       <div class="invalid-feedback">
         Digite seu nome
       </div>
     </div>
     <div class="col-4 col-md-2">
-      <label for="validationCustom02" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationCustom02" placeholder="RG" required>
-      <div class="valid-feedback">
-        Verificado!
-      </div>
+      <label for="rg" class="form-label text-white"></label>
+      <input type="text" class="form-control" id="rg" placeholder="RG" onkeyup="MascaraRg();" required>
       <div class="invalid-feedback">
         Digite seu RG
       </div>
@@ -91,72 +85,49 @@
         <div class="invalid-feedback">
           Digite seu E-mail
         </div>
-        <div class="valid-feedback">
-          Verificado!
-        </div>
       </div>
     </div>
     <div class="col-6 col-md-5">
-      <label for="validationCustom03" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationCustom03" placeholder="Endereço" required>
+      <label for="logradouro" class="form-label text-white"></label>
+      <input type="text" class="form-control" id="logradouro" placeholder="Endereço" minLength='5' required>
       <div class="invalid-feedback">
         Digite um endereço válido
       </div>
-      <div class="valid-feedback">
-        Verificado!
-      </div>
     </div>
     <div class="col-4 col-md-4">
-      <label for="validationCustom03" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationCustom03" placeholder="Cidade" required>
+      <label for="localidade" class="form-label text-white"></label>
+      <input type="text" class="form-control" id="localidade" placeholder="Cidade" minLength='4' required>
       <div class="invalid-feedback">
         Digite uma cidade válida
-      </div>
-      <div class="valid-feedback">
-        Verificado!
       </div> 
     </div>
     <div class="col-4 col-md-3">
-      <label for="validationCustom04" class="form-label text-white"></label>
-      <select class="form-select" id="validationCustom04" required>
-        <option selected disabled value="">Estado</option>
-        <option>...</option>
-      </select>
+      <label for="uf" class="form-label text-white"></label>
+      <input type="text" class='form-control' id="uf" placeholder='UF' minLength='4' required>
       <div class="invalid-feedback">
-        Selecione um estado
+        Digite um estado
       </div>
-      <div class="valid-feedback">
-        Verificado!
-      </div>
+      </input>
     </div>
     <div class="col-4 col-md-2">
-      <label for="validationCustom05" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationCustom05" placeholder="CEP" required>
+      <label for="cep" class="form-label text-white"></label>
+      <input type="text" class="form-control" id="cep" placeholder="CEP" minlength="8" maxlength="9" required>
       <div class="invalid-feedback">
         Digite um cep válido
       </div>
-      <div class="valid-feedback">
-        Verificado!
-      </div>
     </div>
     <div class="col-6 col-md-5">
-      <label for="validationCustom05" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationCustom05" placeholder="Senha" required>
+      <label for="password" class="form-label text-white"></label>
+      <input type="password" class="form-control" id="password" placeholder="Senha" minlength="5" required>
       <div class="invalid-feedback">
         Digite uma senha
       </div>
-      <div class="valid-feedback">
-        Verificado!
-      </div>
     </div>
     <div class="col-6 col-md-5">
-      <label for="validationCustom05" class="form-label text-white"></label>
-      <input type="text" class="form-control" id="validationCustom05" placeholder="Confirme a Senha" required>
+      <label for="confirm_password" class="form-label text-white"></label>
+      <input type="password" class="form-control" id="confirm_password" placeholder="Confirme a Senha" required>
       <div class="invalid-feedback">
         Senha incorreta
-      </div>
-      <div class="valid-feedback">
-        Verificado!
       </div>
     </div>
     <div class="col-12">
@@ -213,6 +184,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script> -->
    <script src="validation.js"></script>
    <script src="sideBar.js"></script>
+   <script src="passValidation.js"></script>
+   <script src="apiCep.js"></script>
   </body>
 
 </html>
