--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -53,7 +53,7 @@
           <a class="nav-link" href="#"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id ='profile' href="#"><img src="user.png" id='icon' width="30px" height="30px"></a>
+          <a class="nav-link" id ='profile' href="login.html"><img src="user.png" id='icon' width="30px" height="30px"></a>
         </li>
       </ul>
   </nav>
