--- a/pages/redefinirSenha.html
+++ b/pages/redefinirSenha.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="redefinirSenha.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <title>ResíliaFlix</title>
 
@@ -49,7 +49,7 @@
             <a class="nav-link" href="#"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id ='profile' href="#"><img src="user.png" id='icon' width="30px" height="30px"></a>
+            <a class="nav-link" id ='profile' href="login.html"><img src="user.png" id='icon' width="30px" height="30px"></a>
           </li>
         </ul>
     </nav>
@@ -61,44 +61,24 @@
 <div class="container align-items-center signIn">
   <form class="row g-4 needs-validation formSignIn with-linear-gradient" novalidate>
 
-    
-    <h2 class="title-signIn text-white text-center bold">Login</h2>
+    <h2 class="title-signIn text-white text-center bold">Esqueceu a senha ?</h2>
     <div class="col-12">
+        <p class="text-white lowcase">Digite o seu endereço de e-mail de cadastro. Você receberá um e-mail com instruções sobre como redefinir a sua senha.</h6>
+    </div> 
+    <div class="col-2"></div> 
+    <div class="col-8 mt-0">
         <label for="inputEmail" class="control-label text-white"></label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="E-mail" required>
+        <input type="email" class="form-control" id="inputEmail" placeholder="E-mail de cadastro" required>
         <div class="invalid-feedback">
-          Digite seu E-mail
+          Digite seu E-mail de cadastro
         </div>
-    </div>  
-    <div class="col-12">
-      <label for="password" class="form-label text-white"></label>
-      <input type="password" class="form-control" id="password" placeholder="Senha" minlength="5" required>
-      <div class="invalid-feedback">
-        Digite sua senha
-      </div>
     </div>
-    <div class="col-6 mt-5 rememberPass">
-      <div class="form-check text-white text-start">
-        <input class="form-check-input" type="checkbox" value="" id="invalidCheck">
-        <label class="form-check-label text-white" for="invalidCheck">
-          Lembrar minha senha
-        </label>
-      </div>
-    </div>
-    <div class="col-6 mt-5">
-        <div class="form-check text-white forgetPass text-end">
-          <a href="redefinirSenha.html" class="link">Esqueci minha senha</a>
-        </div>
-      </div>
-    <div class="col-12 mt-5">
-        <div class="form-check text-center creatAcount lead">
-          <a href="cadastro.html" class="link"><img src="add-user.png"  id='icon' width="27px" height="27px">Criar uma conta</a>
-        </div>
-      </div>
+    <div class="col-2"></div> 
+    <div><p class="text-success text-center lead" id="RedefinitionSuccess">As instruções foram enviadas para o seu e-mail !</p></div>
     <div class="row ms-0">
       <div class="col-4"></div>
     <div class="col-4 d-flex justify-content-center">
-      <button class="btn btn-outline-info" type="submit">Entrar</button>
+      <button class="btn btn-outline-info" id="enviar" onclick="redefinir();" type="submit">Enviar</button>
     </div>
     <div class="col-4 ms-0"></div>
   </div>
@@ -125,6 +105,7 @@
 
     <script src="SideBar.js"></script>
     <script src="validation.js"></script>
+    <script src="redefinirSenha.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
