--- a/pages/login.html
+++ b/pages/login.html
@@ -81,7 +81,7 @@
       <div class="form-check text-white text-start">
         <input class="form-check-input" type="checkbox" value="" id="invalidCheck">
         <label class="form-check-label text-white" for="invalidCheck">
-          Lembrar minha senha
+          Lembrar-me
         </label>
       </div>
     </div>
