--- a/pages/conteudofilme.html
+++ b/pages/conteudofilme.html
@@ -55,14 +55,14 @@
     <div class="container-fluid">
         <div class="row justify-content-center align-itens-center">
           <div class="col">
-            <h3>Little Women</h3>
-            <h5>2019</h5>
-            <h5>Saoirse Ronan, Emma Watson, Florence Pugh, Eliza Scanlen</h5>
-            <h5>Jo March reflects back and forth on her life, telling the beloved story of the March sisters - four young women, each determined to live life on her own terms.</h5>
+            <h3 id="title"></h3>
+            <h5 id="year"></h5>
+            <h5 id="actors"></h5>
+            <h5 id="info"></h5>
             <button class="btn btn-primary" type="button" id="button-addon2"><span class="bi bi-play" style="size: 2rem;"></span></button>        
           </div>
           <div class="col">
-            Column
+           <img src="">
           </div>
         </div>
     </div>
@@ -87,5 +87,6 @@
     </script>
           <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>    
-</body>
+    <script src="/js/conteudo.js"></script>
+  </body>
 </html>
