--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -12,7 +12,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <link href="./style.css" rel="stylesheet">
+  <link href="./buscafilme.css" rel="stylesheet">
   <title>Resiliaflix - Busca</title>
 </head>
 
@@ -55,7 +55,7 @@
             <a class="nav-link" href="#"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id='profile' href="#"><img src="user.png" id='icon' width="30px" height="30px"></a>
+            <a class="nav-link" id='profile' href="login.html"><img src="user.png" id='icon' width="30px" height="30px"></a>
           </li>
         </ul>
       </nav>
@@ -66,7 +66,7 @@
     <div class="input-group mb-3" id="inputGroup">
       <input type="text" id="movie" class="form-control" placeholder="Nome do filme" aria-label="Nome do filme"
         aria-describedby="button-addon2">
-      <button class="btn btn-outline-info" type="search" id="button-addon2" onclick="buscar()">Buscar</button>
+      <button class="btn btn-outline-info" type="search" id="button-addon2" onclick="buscar();">Buscar</button>
     </div>
   </div>
 
@@ -118,7 +118,7 @@
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="/js/buscafilme.js"></script>
+  <script src="../js/buscafilme.js"></script>
 
 
 </body>
