--- a/pages/login.html
+++ b/pages/login.html
@@ -32,7 +32,7 @@
         <li><a href="#" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
         <li><a href="#" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
         <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
-        <li><a href="#" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+        <li><a href="contato.html" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
     
       </ul>
   
@@ -46,7 +46,7 @@
   
         <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
           <li class="nav-item">
-            <a class="nav-link" href="#"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
+            <a class="nav-link" href="buscafilme.html"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id ='profile' href="#"><img src="user.png" id='icon' width="30px" height="30px"></a>
@@ -81,7 +81,7 @@
       <div class="form-check text-white text-start">
         <input class="form-check-input" type="checkbox" value="" id="invalidCheck">
         <label class="form-check-label text-white" for="invalidCheck">
-          Lembrar-me
+          Lembrar-me  
         </label>
       </div>
     </div>
