--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="../css/cadastro.css">
     <title>ResíliaFlix</title>
   </head>
   
@@ -25,35 +25,35 @@
   <nav class="navbar navbar-dark bg-dark fixed-top">
 
     <button type="button" class="navbar-toggler btnMenu">
-      <img src="align-left.png" alt="Menu" height="30px" width="32px">
+      <img src="../images/align-left.png" alt="Menu" height="30px" width="32px">
     </button>
     <a href="#" class="navbar-brand navBrand">
-      <img src="ResiliaflixLogo - Blue.png" class='logo' alt="Logo">
+      <img src="../images/ResiliaflixLog-Blue.png" class='logo' alt="Logo">
     </a>
 
     <ul class="list-unstyled font-weight-bold buttonList">
 
-      <li><a href="#" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
-      <li><a href="#" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
-      <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
-      <li><a href="#" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+      <li><a href="index.html" class="text-reset"><img src="../images/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+      <li><a href="index.html" class="text-reset"><img src="../images/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+      <li><a href="index.html" class="text-reset"><img src="../images/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+      <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
   
     </ul>
 
     <ul class="list-unstyled font-weight-bold flexList flex-grow-1">
 
-      <li><a href="#" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
-      <li><a href="#" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
-      <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
-      <li><a href="#" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+      <li><a href="index.html" class="text-reset"><img src="../images/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+      <li><a href="index.html" class="text-reset"><img src="../images/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+      <li><a href="index.html" class="text-reset"><img src="../images/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+      <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
     </ul>
 
       <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
+          <a class="nav-link" href="#"><img src="../images/loupe.png" id='icon' width="33px" height="33px"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id ='profile' href="login.html"><img src="user.png" id='icon' width="30px" height="30px"></a>
+          <a class="nav-link" id ='profile' href="login.html"><img src="../images/user.png" id='icon' width="30px" height="30px"></a>
         </li>
       </ul>
   </nav>
@@ -182,10 +182,10 @@
     
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script> -->
-   <script src="validation.js"></script>
-   <script src="sideBar.js"></script>
-   <script src="passValidation.js"></script>
-   <script src="apiCep.js"></script>
+   <script src="../js/validation.js"></script>
+   <script src="../js/sideBar.js"></script>
+   <script src="../js/passValidation.js"></script>
+   <script src="../js/apiCep.js"></script>
   </body>
 
 </html>
