--- a/pages/contato.html
+++ b/pages/contato.html
@@ -8,121 +8,99 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/contato.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">
-    <style>
-        body {
-            font-family: 'Poppins';
-            font-size: 22px;
-        }
-    </style>
-
     <title>ResiliaFlix</title>
 </head>
 
+<body>
 <header>
   <div class="container-fluid">
     <nav class="navbar navbar-dark bg-dark fixed-top">
   
       <button type="button" class="navbar-toggler btnMenu">
-        <img src="align-left.png" alt="Menu" height="30px" width="32px">
+        <img src="../images/align-left.png" alt="Menu" height="30px" width="32px">
       </button>
       <a href="#" class="navbar-brand navBrand">
-        <img src="ResiliaflixLogo - Blue.png" class='logo' alt="Logo">
+        <img src="../images/ResiliaflixLog-Blue.png" class='logo' alt="Logo">
       </a>
   
       <ul class="list-unstyled font-weight-bold buttonList">
   
-        <li><a href="../index.html" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
-        <li><a href="buscafilme.html" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
-        <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
-        <li><a href="contato.html" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
     
       </ul>
   
       <ul class="list-unstyled font-weight-bold flexList flex-grow-1">
   
-        <li><a href="../index.html" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
-        <li><a href="buscafilme.html" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
-        <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
-        <li><a href="contato.html" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
       </ul>
   
         <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
           <li class="nav-item">
-            <a class="nav-link" href="#"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
+            <a class="nav-link" href="buscafilme.html"><img src="../images/loupe.png" id='icon' width="33px" height="33px"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id ='profile' href="#"><img src="user.png" id='icon' width="30px" height="30px"></a>
+            <a class="nav-link" id ='profile' href="login.html"><img src="../images/user.png" id='icon' width="30px" height="30px"></a>
           </li>
         </ul>
     </nav>
    
 </header>
+  
+  <main class="container">
+ <h1 class="mb-5">Contato</h1>
 
-<body>
-  <h1>Contato</h1>
-    <main>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../images/andrey.jpeg" id= "imagens" class="c-block w-50" alt="...">
-                <div class="carousel-caption c-none c-md--block ">
-                    <h2>Conheça nosso time</h2>
-                    <p>Andrey</p>
-                <a href="https://github.com/Nithack" class="main-btn">Ver Github</a>
-                </div>
-            </div>
-              <div class="carousel-item">
-                <img src="../images/caio.jpg"  id= "imagens" class="c-block w-50" alt="...">
-                <div class="carousel-caption c-none c-md--block ">
-                    <h2>Conheça nosso time</h2>
-                    <p>Caio Alves</p>
-                <a href="https://github.com/caioalvess" class="main-btn">Ver Github</a>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../images/ellen.jpeg"  id= "imagens" class="c-block w-50" alt="...">
-                <div class="carousel-caption c-none c-md--block ">
-                    <h2>Conheça nosso time</h2>
-                    <p>Ellen Oliveira</p>
-                <a href="https://github.com/EllenOli" class="main-btn">Ver Github</a>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../images/renata.jpeg"  id= "imagens" class="c-block w-50" alt="...">
-                <div class="carousel-caption c-none c-md--block ">
-                    <h2>Conheça nosso time</h2>
-                    <p>Renata Hortense</p>
-                <a href="https://github.com/renatahortense" class="main-btn">Ver Github</a>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+ <div class="row row-cols-1 g-4">
+  <div class="col-3">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a short card.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+  </main>
 
-    <footer class="d-flex flex-direction-column align-itens-center justify-content-center">
+    <!-- <footer class="d-flex flex-direction-column align-itens-center justify-content-center">
       <div class="row">
         <div class="col-12 my-2">
           <h6 class = 'text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
@@ -132,9 +110,9 @@
         </div>
       </div>
     </footer>
-  
-
-    <script src="contato.js"></script>
+   -->
+    <script src="../js/sideBar.js"></script>
+    <script src="../js/contato.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
         crossorigin="anonymous"></script>
