--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <title>ResíliaFlix</title>
 
@@ -21,35 +21,35 @@
     <nav class="navbar navbar-dark bg-dark fixed-top">
   
       <button type="button" class="navbar-toggler btnMenu">
-        <img src="align-left.png" alt="Menu" height="30px" width="32px">
+        <img src="../images/align-left.png" alt="Menu" height="30px" width="32px">
       </button>
       <a href="#" class="navbar-brand navBrand">
-        <img src="ResiliaflixLogo - Blue.png" class='logo' alt="Logo">
+        <img src="../images/ResiliaflixLog-Blue.png" class='logo' alt="Logo">
       </a>
   
       <ul class="list-unstyled font-weight-bold buttonList">
   
-        <li><a href="#" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
-        <li><a href="#" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
-        <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
-        <li><a href="contato.html" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
     
       </ul>
   
       <ul class="list-unstyled font-weight-bold flexList flex-grow-1">
   
-        <li><a href="#" class="text-reset"><img src="home.png"  id='icon' width="23px" height="23px">Home</a></li>
-        <li><a href="#" class="text-reset"><img src="play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
-        <li><a href="#" class="text-reset"><img src="information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
-        <li><a href="#" class="text-reset"><img src="phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/home.png"  id='icon' width="23px" height="23px">Home</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/play.png"  id='icon' width="23px" height="23px">Filmes</a></li>
+        <li><a href="index.html" class="text-reset"><img src="../images/information.png"  id='icon' width="23px" height="23px">Sobre</a></li>
+        <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png"  id='icon' width="23px" height="23px">Contato</a></li>
       </ul>
   
         <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
           <li class="nav-item">
-            <a class="nav-link" href="buscafilme.html"><img src="loupe.png" id='icon' width="33px" height="33px"></a>
+            <a class="nav-link" href="buscafilme.html"><img src="../images/loupe.png" id='icon' width="33px" height="33px"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id ='profile' href="#"><img src="user.png" id='icon' width="30px" height="30px"></a>
+            <a class="nav-link" id ='profile' href="login.html"><img src="../images/user.png" id='icon' width="30px" height="30px"></a>
           </li>
         </ul>
     </nav>
@@ -92,7 +92,7 @@
       </div>
     <div class="col-12 mt-5">
         <div class="form-check text-center creatAcount lead">
-          <a href="cadastro.html" class="link"><img src="add-user.png"  id='icon' width="27px" height="27px">Criar uma conta</a>
+          <a href="cadastro.html" class="link"><img src="../images/add-user.png"  id='icon' width="27px" height="27px">Criar uma conta</a>
         </div>
       </div>
     <div class="row ms-0">
@@ -123,8 +123,8 @@
 
 
 
-    <script src="SideBar.js"></script>
-    <script src="validation.js"></script>
+    <script src="../js/sideBar.js"></script>
+    <script src="../js/validation.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
