adição de efeito fade no nav de contato e exclusão de códigos sem funcionalidade aparente

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <div class="container-fluid">
-      <nav class="navbar navbar-dark bg-dark fixed-top">
+      <nav class="navbar navbar-dark bg-dark">
 
         <button type="button" class="navbar-toggler btnMenu">
           <img src="../images/align-left.png" alt="Menu" height="30px" width="32px">
