--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -50,7 +50,7 @@
 
       <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="../images/loupe.png" id='icon' width="33px" height="33px"></a>
+          <a class="nav-link" href="buscafilme.html"><img src="../images/loupe.png" id='icon' width="33px" height="33px"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id ='profile' href="login.html"><img src="../images/user.png" id='icon' width="30px" height="30px"></a>
@@ -167,7 +167,12 @@
   </footer>
 
 
-      
+  <script>
+    window.addEventListener("scroll", function(){
+        var header = document.querySelector('header');
+        header.classList.toggle('sticky', window.scrollY > 0);
+    })
+</script>
 
 
 
