correção de bug Page BuscaFilme

--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -73,7 +73,7 @@
   <div class="container-fluid" id="container-erro">
     <div class="row justify-content-center align-items-center">
       <div class="container-fluid d-flex justify-content-center align-items-center">
-        <h2 id="error">Fime não encontrado !</h2>
+        <h2 id="error">Filme não encontrado !</h2>
       </div>
     </div>  
   </div> 
