--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -33,7 +33,7 @@
 
           <li><a href="index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px" height="23px">Home</a></li>
           <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px" height="23px">Filmes</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px" height="23px">Sobre</a>
+          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px" height="23px">Sobre</a>
           </li>
           <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px" height="23px">Contato</a>
           </li>
@@ -44,7 +44,7 @@
 
           <li><a href="index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px" height="23px">Home</a></li>
           <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px" height="23px">Filmes</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px" height="23px">Sobre</a>
+          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px" height="23px">Sobre</a>
           </li>
           <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px" height="23px">Contato</a>
           </li>
