--- a/pages/contato.html
+++ b/pages/contato.html
@@ -33,7 +33,7 @@
                 height="23px">Home</a></li>
           <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
                 height="23px">Filmes</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
                 height="23px">Sobre</a></li>
           <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
                 height="23px">Contato</a></li>
@@ -46,7 +46,7 @@
                 height="23px">Home</a></li>
           <li><a href="index.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
                 height="23px">Filmes</a></li>
-          <li><a href="index.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
                 height="23px">Sobre</a></li>
           <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
                 height="23px">Contato</a></li>
