Icones no title e adição de fadein no restante das pages

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -13,6 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link href="../css/sobre.css" rel="stylesheet">  
+  <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">
   <title>Resiliaflix - Busca</title>
 </head>
 
@@ -66,7 +67,7 @@
   <div class="container-fluid" id="resiliaflix-1">
       
       <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center" id="resi-pic">
-        <img class="with-linear-gradient" src="/images/resiliaflix.png" id="pic">
+        <img class="with-linear-gradient" src="../images/resiliaflix.png" id="pic">
       </div>
 
       <div class="col-12 col-sm-6" id="resi-info">
