--- a/pages/buscafilme.html
+++ b/pages/buscafilme.html
@@ -12,7 +12,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <link href="../css/buscafilme.css" rel="stylesheet">  
+  <link href="../css/buscafilme.css" rel="stylesheet">
+  <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">  
   <title>Resiliaflix - Busca</title>
 </head>
 
@@ -96,14 +97,13 @@
     </div>
   </div>
 
-
-  <footer>
+  <footer class="d-flex flex-direction-column align-itens-center justify-content-center">
     <div class="row">
       <div class="col-12 my-2">
-        <h6 class='text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
+        <h6 class = 'text-center text-white lead onlineFilms'>resiliaflix - catálogo de fimes online</h6>
       </div>
       <div class="col-12">
-        <h6 class='text-center text-white lead'><small>©todos os direitos reservados</small></h6>
+        <h6 class = 'text-center text-white lead'><small>©todos os direitos reservados</small></h6>
       </div>
     </div>
   </footer>
