--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,7 @@
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/home.css">
+  <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon">
   <title>Resilia Flix</title>
 </head>
 
