--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('Psycho')"> <img src="./images/terror/003.jpg" class="d-block w-15"
-                          alt="..."></button>>
+                          alt="..."></button>
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('The Conjuring')"> <img src="./images/terror/004.jpg"
-                          class="d-block w-15" alt="..."></button>>
+                          class="d-block w-15" alt="..."></button>
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('Fantasy Island')"> <img src="./images/terror/005.jpg"
-                          class="d-block w-15" alt="..."></button>>
+                          class="d-block w-15" alt="..."></button>
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('The Lodge')"> <img src="./images/terror/006.jpg" class="d-block w-15"
@@ -384,15 +384,15 @@
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('The Butterfly Effect')"> <img src="./images/drama/003.jpg"
-                          class="d-block w-15" alt="..."></button>>
+                          class="d-block w-15" alt="..."></button>
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('The Pursuit of Happyness')"> <img src="./images/drama/004.jpg"
-                          class="d-block w-15" alt="..."></button>>
+                          class="d-block w-15" alt="..."></button>
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('I Still Believe')"> <img src="./images/drama/005.jpg"
-                          class="d-block w-15" alt="..."></button>>
+                          class="d-block w-15" alt="..."></button>
                     </div>
                     <div class="col-2">
                       <button onclick="findMovie('All the Bright Places')"> <img src="./images/drama/006.jpg"
