Correção de todos os links de todas as peges e integração do js com side bar na page Sobre

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
         <li><a href="index.html" class="text-reset"><img src="./images/home.png" id='icon' width="23px"
               height="23px">Home</a></li>
-        <li><a href="./pages/buscafilme.html" class="text-reset"><img src="./images/play.png" id='icon' width="23px"
+        <li><a href="../ResiliaFlix/pages/buscafilme.html" class="text-reset"><img src="./images/play.png" id='icon' width="23px"
               height="23px">Filmes</a></li>
-        <li><a href="/pages/sobre.html" class="text-reset"><img src="./images/information.png" id='icon' width="23px"
+        <li><a href="../ResiliaFlix/pages/sobre.html" class="text-reset"><img src="./images/information.png" id='icon' width="23px"
               height="23px">Sobre</a></li>
-        <li><a href="./pages/contato.html" class="text-reset"><img src="./images/phone-call.png" id='icon' width="23px"
+        <li><a href="../ResiliaFlix/pages/contato.html" class="text-reset"><img src="./images/phone-call.png" id='icon' width="23px"
               height="23px">Contato</a></li>
       </ul>
 
