--- a/pages/login.html
+++ b/pages/login.html
@@ -36,11 +36,11 @@
 
         <li><a href="../index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
               height="23px">Home</a></li>
-        <li><a href="buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+        <li><a href="../pages/buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
               height="23px">Filmes</a></li>
-        <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+        <li><a href="../pages/sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
               height="23px">Sobre</a></li>
-        <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
+        <li><a href="../pages/contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
               height="23px">Contato</a></li>
 
       </ul>
@@ -49,21 +49,21 @@
 
         <li><a href="../index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
               height="23px">Home</a></li>
-        <li><a href="buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+        <li><a href="../pages/buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
               height="23px">Filmes</a></li>
-        <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+        <li><a href="../pages/sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
               height="23px">Sobre</a></li>
-        <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
+        <li><a href="../pages/contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
               height="23px">Contato</a></li>
       </ul>
 
       <ul class="navbar-nav flex-grow-2 searchAndProfile d-flex flex-row">
         <li class="nav-item">
-          <a class="nav-link" href="buscafilme.html"><img src="../images/loupe.png" id='icon' width="33px"
+          <a class="nav-link" href="../pages/buscafilme.html"><img src="../images/loupe.png" id='icon' width="33px"
               height="33px"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id='profile' href="login.html"><img src="../images/user.png" id='icon' width="30px"
+          <a class="nav-link" id='profile' href="../pages/login.html"><img src="../images/user.png" id='icon' width="30px"
               height="30px"></a>
         </li>
       </ul>
