--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -34,12 +34,12 @@
 
           <li><a href="../index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
                 height="23px">Home</a></li>
-          <li><a href="buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+          <li><a href="../pages/buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
                 height="23px">Filmes</a></li>
-          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+          <li><a href="../pages/sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
                 height="23px">Sobre</a>
           </li>
-          <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
+          <li><a href="../pages/contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
                 height="23px">Contato</a>
           </li>
 
@@ -49,12 +49,12 @@
 
           <li><a href="../index.html" class="text-reset"><img src="../images/home.png" id='icon' width="23px"
                 height="23px">Home</a></li>
-          <li><a href="buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
+          <li><a href="../pages/buscafilme.html" class="text-reset"><img src="../images/play.png" id='icon' width="23px"
                 height="23px">Filmes</a></li>
-          <li><a href="sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
+          <li><a href="../pages/sobre.html" class="text-reset"><img src="../images/information.png" id='icon' width="23px"
                 height="23px">Sobre</a>
           </li>
-          <li><a href="contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
+          <li><a href="../pages/contato.html" class="text-reset"><img src="../images/phone-call.png" id='icon' width="23px"
                 height="23px">Contato</a>
           </li>
         </ul>
@@ -113,6 +113,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
     crossorigin="anonymous"></script>
+
+    <script src="../js/sideBar.js"></script>
 
 </body>
 
